[gd_scene load_steps=13 format=2]

[ext_resource path="res://player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/SkillButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/ui_panel.tres" type="StyleBox" id=3]
[ext_resource path="res://ui/textures/bar_fill.png" type="Texture" id=4]
[ext_resource path="res://ui/textures/bar_bg.png" type="Texture" id=5]
[ext_resource path="res://ui/textures/bar_fg.png" type="Texture" id=6]
[ext_resource path="res://ui/textures/bar_fg2.png" type="Texture" id=7]
[ext_resource path="res://ui/textures/bar_fill2.png" type="Texture" id=8]
[ext_resource path="res://world/single_tile_tileset.png" type="Texture" id=9]
[ext_resource path="res://world/World.gd" type="Script" id=10]
[ext_resource path="res://ui/UIObjectiveList.tscn" type="PackedScene" id=11]

[sub_resource type="TileSet" id=1]
0/name = "single_tile_tileset.png 0"
0/texture = ExtResource( 9 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 20, 20 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "single_tile_tileset.png 1"
1/texture = ExtResource( 9 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 20, 0, 20, 20 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "single_tile_tileset.png 2"
2/texture = ExtResource( 9 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 40, 0, 20, 20 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "single_tile_tileset.png 3"
3/texture = ExtResource( 9 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 60, 0, 20, 20 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "single_tile_tileset.png 4"
4/texture = ExtResource( 9 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 80, 0, 20, 20 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "single_tile_tileset.png 5"
5/texture = ExtResource( 9 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 0, 20, 20, 20 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "single_tile_tileset.png 6"
6/texture = ExtResource( 9 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 20, 20, 20, 20 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0
7/name = "single_tile_tileset.png 7"
7/texture = ExtResource( 9 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 40, 20, 20, 20 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0
8/name = "single_tile_tileset.png 8"
8/texture = ExtResource( 9 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 0, 40, 20, 20 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape_one_way = false
8/shape_one_way_margin = 0.0
8/shapes = [  ]
8/z_index = 0
9/name = "single_tile_tileset.png 9"
9/texture = ExtResource( 9 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 40, 40, 20, 20 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shape_offset = Vector2( 0, 0 )
9/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
9/shape_one_way = false
9/shape_one_way_margin = 0.0
9/shapes = [  ]
9/z_index = 0
10/name = "single_tile_tileset.png 10"
10/texture = ExtResource( 9 )
10/tex_offset = Vector2( 0, 0 )
10/modulate = Color( 1, 1, 1, 1 )
10/region = Rect2( 20, 40, 20, 20 )
10/tile_mode = 0
10/occluder_offset = Vector2( 0, 0 )
10/navigation_offset = Vector2( 0, 0 )
10/shape_offset = Vector2( 0, 0 )
10/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
10/shape_one_way = false
10/shape_one_way_margin = 0.0
10/shapes = [  ]
10/z_index = 0

[node name="World" type="Node2D"]
script = ExtResource( 10 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="ShipStatus" type="PanelContainer" parent="UI"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -72.0
margin_right = 222.0
custom_styles/panel = ExtResource( 3 )

[node name="Bars" type="VBoxContainer" parent="UI/ShipStatus"]
margin_left = 18.0
margin_top = 18.0
margin_right = 204.0
margin_bottom = 54.0

[node name="Armor" type="HBoxContainer" parent="UI/ShipStatus/Bars"]
margin_right = 186.0
margin_bottom = 16.0

[node name="Label" type="Label" parent="UI/ShipStatus/Bars/Armor"]
margin_top = 1.0
margin_right = 42.0
margin_bottom = 15.0
text = "HULL: "

[node name="ArmorBar" type="TextureProgress" parent="UI/ShipStatus/Bars/Armor"]
margin_left = 46.0
margin_right = 174.0
margin_bottom = 16.0
rect_min_size = Vector2( 128, 16 )
value = 50.0
texture_under = ExtResource( 5 )
texture_over = ExtResource( 7 )
texture_progress = ExtResource( 8 )
nine_patch_stretch = true

[node name="Shield" type="HBoxContainer" parent="UI/ShipStatus/Bars"]
margin_top = 20.0
margin_right = 186.0
margin_bottom = 36.0

[node name="Label" type="Label" parent="UI/ShipStatus/Bars/Shield"]
margin_top = 1.0
margin_right = 54.0
margin_bottom = 15.0
text = "SHIELD: "

[node name="ShieldBar" type="TextureProgress" parent="UI/ShipStatus/Bars/Shield"]
margin_left = 58.0
margin_right = 186.0
margin_bottom = 16.0
rect_min_size = Vector2( 128, 16 )
value = 50.0
texture_under = ExtResource( 5 )
texture_over = ExtResource( 6 )
texture_progress = ExtResource( 4 )
nine_patch_stretch = true

[node name="Weapons" type="PanelContainer" parent="UI"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -225.0
margin_top = -72.0
custom_styles/panel = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Weapons"]
margin_left = 18.0
margin_top = 18.0
margin_right = 207.0
margin_bottom = 54.0

[node name="Heat" type="HBoxContainer" parent="UI/Weapons/VBoxContainer"]
margin_right = 189.0
margin_bottom = 16.0

[node name="Label" type="Label" parent="UI/Weapons/VBoxContainer/Heat"]
margin_top = 1.0
margin_right = 41.0
margin_bottom = 15.0
text = "HEAT: "

[node name="TextureProgress" type="TextureProgress" parent="UI/Weapons/VBoxContainer/Heat"]
margin_left = 45.0
margin_right = 173.0
margin_bottom = 16.0
rect_min_size = Vector2( 128, 16 )
value = 50.0
texture_under = ExtResource( 5 )
texture_over = ExtResource( 7 )
texture_progress = ExtResource( 8 )
nine_patch_stretch = true

[node name="Energy" type="HBoxContainer" parent="UI/Weapons/VBoxContainer"]
margin_top = 20.0
margin_right = 189.0
margin_bottom = 36.0

[node name="Label" type="Label" parent="UI/Weapons/VBoxContainer/Energy"]
margin_top = 1.0
margin_right = 57.0
margin_bottom = 15.0
text = "ENERGY: "

[node name="TextureProgress" type="TextureProgress" parent="UI/Weapons/VBoxContainer/Energy"]
margin_left = 61.0
margin_right = 189.0
margin_bottom = 16.0
rect_min_size = Vector2( 128, 16 )
value = 50.0
texture_under = ExtResource( 5 )
texture_over = ExtResource( 6 )
texture_progress = ExtResource( 4 )
nine_patch_stretch = true

[node name="Map" type="PanelContainer" parent="UI"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -36.0
margin_bottom = 36.0
custom_styles/panel = ExtResource( 3 )

[node name="Skills" type="PanelContainer" parent="UI"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -244.0
margin_top = -108.0
margin_right = 244.0
custom_styles/panel = ExtResource( 3 )

[node name="SkillList" type="HBoxContainer" parent="UI/Skills"]
margin_left = 18.0
margin_top = 18.0
margin_right = 470.0
margin_bottom = 90.0

[node name="Weapon1" parent="UI/Skills/SkillList" instance=ExtResource( 2 )]

[node name="Weapon2" parent="UI/Skills/SkillList" instance=ExtResource( 2 )]
margin_left = 76.0
margin_right = 148.0

[node name="Device1" parent="UI/Skills/SkillList" instance=ExtResource( 2 )]
margin_left = 152.0
margin_right = 224.0

[node name="Device2" parent="UI/Skills/SkillList" instance=ExtResource( 2 )]
margin_left = 228.0
margin_right = 300.0

[node name="Device3" parent="UI/Skills/SkillList" instance=ExtResource( 2 )]
margin_left = 304.0
margin_right = 376.0

[node name="Device4" parent="UI/Skills/SkillList" instance=ExtResource( 2 )]
margin_left = 380.0
margin_right = 452.0

[node name="UIObjectiveList" parent="UI" instance=ExtResource( 11 )]

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 0, 0, 0, 0, 0, 0 )
centered_textures = true
format = 1

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 640, 360 )

[node name="PlayerCam" type="Camera2D" parent="Player"]
current = true
limit_left = 0
limit_top = 0
limit_right = 2560
limit_bottom = 1440
